...
            Color("defaultBackgroundColor")
                .ignoresSafeArea()
            VStack {
                Button(action: {
                    isGameActive = true
                }) {
                    Text("play")
                        .monospaced()
                        .bold()
                        .frame(width: 150, height: 50)
                        .background(Color("defaultButtonColor"))
                        .foregroundColor(Color("defaultFontColor"))
                }
...
                }
                
                HStack {
                    Button(action: {
                        powerUpMenu.toggle()
                    }) {
                        Image(systemName: "powerplug.portrait")
                            .resizable()
                            .scaledToFit()
                            .frame(width: 35, height: 35)
                            .foregroundColor(Color("defaultFontColor"))
                            .padding()
                    }
                    
                    Button(action: {
                        gameStatus.isGamePaused.toggle()
                    }) {
                        Image(systemName: "pause.circle.fill")
                            .resizable()
                            .scaledToFit()
                            .frame(width: 35, height: 35)
                            .foregroundColor(Color("defaultFontColor"))
                            .padding()
                    }
...
                        .cornerRadius(2)
                    Spacer()
                }
                
                VStack {
                    
                    Text("shake to power up!")
                        .monospaced()
                        .bold()
                        .padding()
                    Text("requires 20 points from the bank")
                        .monospaced()
                        .bold()
...
